# Axum_Web

./: .gitignore  README.md  README_EN.md
file_manage/: .env  Cargo.toml  package-lock.json
file_manage/src/: lib.rs  main.rs  routes.rs
file_manage/src/db/: db_error.rs  mod.rs  mysql.rs
file_manage/src/entity_operations/: errors.rs  jwt.rs  mod.rs  redis_jwt.rs  user.rs
file_manage/src/os/: pub.rs
