[package]
name = "file_manage"
version = "0.1.0"
edition = "2021"
default-run = "file_manage"

[dependencies]
axum = "0.7.5"
bcrypt = "0.15.1" # 密码哈希函数
chrono = { version = "0.4.34", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.1"
jsonwebtoken = "9.3.0"
serde_json = "1.0.118"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tower-http = { version = "0.3.5", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = [
    "mysql",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
lazy_static = "1.4.0"
dotenv = "0.15.0"
